added seller photo and made some more updates

--- a/index.html
+++ b/index.html
@@ -112,14 +112,13 @@
             <div class="seller-intro">
               <div
                 class="seller-photo"
-                style="background-image: url(./Dist/Images/seller-pic-0.jpg)"
+                style="background-image: url(./Dist/Images/wale.jpg)"
               ></div>
               <div class="seller-brief text-center">
                 <h3>Hello, my name is</h3>
-                <h1 class="mont-font">Ayantunde O. Samuel.</h1>
+                <h1 class="mont-font">Samuel Olawale</h1>
                 <h5>
-                  I am a, professional web developer(wordpress heavy) and a
-                  <br />
+                  I am a social media manager and a
                   certified copywriter.
                 </h5>
               </div>
@@ -158,10 +157,7 @@
               <div class="row">
                 <div class="seller-area">
                   <div class="seller-banner">
-                    <img
-                      src="./Dist/Images/seller-pic-1.jpg"
-                      alt="seller-image"
-                    />
+                    <img src="./Dist/Images/wale.jpg" alt="seller-image" />
                   </div>
                   <div class="about-text-case">
                     <p>
@@ -592,8 +588,8 @@
               </div>
               <div class="phone-numbers">
                 <span>
-                  +234 87 9989 9989, <br />
-                  +234 89 8988 8987
+                  +234 81 4820 4684, <br />
+                  +234 91 5402 761x
                 </span>
                 <div class="social-icons-case">
                   <a href="#" class="social-link">
